<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project>
    <developers>
        <developer>
            <name>Peter Verhas</name>
            <email>peter@verhas.com</email>
        </developer>
    </developers>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.javax0.logiqua</groupId>
                <artifactId>api</artifactId>
                <version>1.0.0</version>
            </dependency>
            <dependency>
                <groupId>com.javax0.logiqua</groupId>
                <artifactId>engine</artifactId>
                <version>1.0.0</version>
            </dependency>
            <dependency>
                <groupId>com.javax0.logiqua</groupId>
                <artifactId>commands</artifactId>
                <version>1.0.0</version>
            </dependency>
            <dependency>
                <groupId>com.javax0.logiqua</groupId>
                <artifactId>json</artifactId>
                <version>1.0.0</version>
            </dependency>
            <dependency>
                <groupId>com.javax0.logiqua</groupId>
                <artifactId>lsp</artifactId>
                <version>1.0.0</version>
            </dependency>
            <dependency>
                <groupId>com.javax0.logiqua</groupId>
                <artifactId>yaml</artifactId>
                <version>1.0.0</version>
            </dependency>
            <dependency>
                <groupId>com.javax0.logiqua</groupId>
                <artifactId>xml</artifactId>
                <version>1.0.0</version>
            </dependency>
            <dependency>
                <groupId>com.javax0.logiqua</groupId>
                <artifactId>lex</artifactId>
                <version>1.0.0</version>
            </dependency>
            <dependency>
                <groupId>com.javax0.logiqua</groupId>
                <artifactId>jsonlogic</artifactId>
                <version>1.0.0</version>
            </dependency>
            <dependency>
                <groupId>org.yaml</groupId>
                <artifactId>snakeyaml</artifactId>
                <version>2.5</version>
            </dependency>
            <dependency>
                <scope>test</scope>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>6.0.0</version>
            </dependency>
            <dependency>
                <scope>test</scope>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>6.0.0</version>
            </dependency>
            <dependency>
                <scope>test</scope>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-params</artifactId>
                <version>6.0.0</version>
            </dependency>
            <dependency>
                <scope>test</scope>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>5.17.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.javax0.logiqua</groupId>
    <profiles>
        <profile>
            <build>
                <plugins>
                    <plugin>
                        <executions>
                            <execution>
                                <phase>verify</phase>
                                <id>sign-artifacts</id>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                    </plugin>
                    <plugin>
                        <extensions>true</extensions>
                        <configuration>
                            <autoPublish>true</autoPublish>
                            <publishingServerId>central</publishingServerId>
                        </configuration>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
            <id>release</id>
        </profile>
    </profiles>
    <description>Logiqua scriting tool</description>
    <packaging>pom</packaging>
    <version>1.0.0</version>
    <modules>
        <module>api</module>
        <module>engine</module>
        <module>commands</module>
        <module>json</module>
        <module>lsp</module>
        <module>yaml</module>
        <module>xml</module>
        <module>lex</module>
        <module>jsonlogic</module>
    </modules>
    <url>https://github.com/logiqua/scribequa</url>
    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.3.1</version>
                </plugin>
                <plugin>
                    <configuration>
                        <archive>
                            <manifest>
                                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                            </manifest>
                        </archive>
                    </configuration>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.4.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>3.7.1</version>
                </plugin>
                <plugin>
                    <executions>
                        <execution>
                            <id>attach-javadoc</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <doclint>none</doclint>
                        <source>21</source>
                    </configuration>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.12.0</version>
                </plugin>
                <plugin>
                    <configuration>
                        <release>21</release>
                        <source>21</source>
                        <encoding>UTF-8</encoding>
                        <target>21</target>
                    </configuration>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.1</version>
                </plugin>
                <plugin>
                    <configuration>
                        <delimiters>
                            <delimiter>@</delimiter>
                        </delimiters>
                        <encoding>UTF-8</encoding>
                    </configuration>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.3.1</version>
                </plugin>
                <plugin>
                    <executions>
                        <execution>
                            <id>collect</id>
                            <goals>
                                <goal>collect</goal>
                            </goals>
                        </execution>
                    </executions>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>3.8.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.4</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-gpg-plugin</artifactId>
                    <version>3.2.7</version>
                </plugin>
                <plugin>
                    <extensions>true</extensions>
                    <configuration>
                        <autoPublish>true</autoPublish>
                        <publishingServerId>central</publishingServerId>
                    </configuration>
                    <groupId>org.sonatype.central</groupId>
                    <artifactId>central-publishing-maven-plugin</artifactId>
                    <version>0.7.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <name>Logiqua Parent</name>
    <artifactId>logiqua-parent</artifactId>
    <scm>
        <connection>scm:git:git://github.com/logiqua/scribequa.git</connection>
        <url>https:/github.com/logiqua/scribequa</url>
        <developerConnection>scm:git:ssh://github.com/logiqua/scribequa.git</developerConnection>
    </scm>
    <properties>
        <maven.plugin.validation>VERBOSE</maven.plugin.validation>
        <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ssZ</maven.build.timestamp.format>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
</project>